// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render align 1`] = `
<span
  class="wp-components-text css-1sit01n"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render as another element 1`] = `
<div
  class="wp-components-text css-1rgm0kx"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render color 1`] = `
<span
  class="wp-components-text css-1c8otw0"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render correctly 1`] = `
<span
  class="wp-components-text css-1rgm0kx"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render custom size 1`] = `
<span
  class="wp-components-text css-5dk9p4"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render display 1`] = `
<span
  class="wp-components-text css-12uga8t"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render highlighted words 1`] = `
<span
  class="wp-components-text css-16gpfwl"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  <span
    class=""
    data-g2-component="Text"
  >
    Some people are 
  </span>
  <mark
    class=" "
    data-g2-component="TextHighlight"
  >
    worth
  </mark>
  <span
    class=""
    data-g2-component="Text"
  >
     melting for.
  </span>
</span>
`;

exports[`props should render highlighted words with highlightCaseSensitive 1`] = `
<span
  class="wp-components-text css-16gpfwl"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  <span
    class=""
    data-g2-component="Text"
  >
    Some people are worth melting for.
  </span>
</span>
`;

exports[`props should render highlighted words with undefined passed 1`] = `
<span
  class="wp-components-text css-1rgm0kx"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render isBlock 1`] = `
<span
  class="wp-components-text css-12n5bn0"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render lineHeight 1`] = `
<span
  class="wp-components-text css-wwwiu8"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render optimizeReadabilityFor 1`] = `
<span
  class="wp-components-text css-3u4nfg"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render size 1`] = `
<span
  class="wp-components-text css-19culc4"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render truncate 1`] = `
<span
  class="wp-components-truncate wp-components-text css-10mweee"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render upperCase 1`] = `
<span
  class="wp-components-text css-1moh74u"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render variant 1`] = `
<span
  class="wp-components-text css-g8v1yb"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render weight 1`] = `
<span
  class="wp-components-text css-8zgo0y"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;
